# jankey_type

./: CMakeLists.txt  README.md  ncurses.md
dict/: en_gb.txt
src/: config.h  constants.h  err.c  err.h  gap_buffer.c  gap_buffer.h  helpers.c  helpers.h  jankey_type.c  jankey_type.h  main.c  post_round_modal.c  post_round_modal.h  typing_test.c  typing_test.h  typing_test_stats.c  typing_test_stats.h  typing_test_view.c  typing_test_view.h  word_store.c  word_store.h
src/views/: round_end_view.c  round_end_view.h
